Move responses to view
