# view/product.go
@@ -1,11 +1,6 @@
-package model
+package view
 
-import (
-	"gorm.io/gorm"
-)
-
-type Product struct {
-	gorm.Model
+type ProductCreate struct {
 	Code  string `json:"code" validate:"required" example:"A45"`
 	Price uint   `json:"price" validate:"required,gte=0,lte=500" example:"200"`
 }
